<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    tools:context=".PrivacyChaptersFragment">

    <!--    all items-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="31"
        android:columnCount="1">


        <!--  Unit 1 Topic 1.1.1 card 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:src="@drawable/number_01"/>

                <TextView
                    android:layout_marginEnd="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_3_privacy_unit1_topic_01_01"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/view"
                    app:icon="@drawable/ppt_icon_32"
                    app:iconGravity="end" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!--  Unit 1 Topic 1.1.2 card 2-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:src="@drawable/number_02"/>

                <TextView
                    android:layout_marginEnd="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_3_privacy_unit1_topic_02_01"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/view"
                    app:icon="@drawable/ppt_icon_32"
                    app:iconGravity="end" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!--  Unit 1 Topic 1.1.3 card 3-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:src="@drawable/number_03"/>

                <TextView
                    android:layout_marginEnd="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_3_privacy_unit1_topic_02_02"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/view"
                    app:icon="@drawable/ppt_icon_32"
                    app:iconGravity="end" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!--  Unit 1 Topic 1.1.4 card 4-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:src="@drawable/number_04"/>

                <TextView
                    android:layout_marginEnd="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_3_privacy_unit1_topic_03_01"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/view"
                    app:icon="@drawable/ppt_icon_32"
                    app:iconGravity="end" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!--  Unit 1 Topic 1.1.5 card 5-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:src="@drawable/number_05"/>

                <TextView
                    android:layout_marginEnd="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_3_privacy_unit1_topic_03_02"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/view"
                    app:icon="@drawable/ppt_icon_32"
                    app:iconGravity="end" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>
</ScrollView>